konst/tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.stderr
error: `find` expects to be passed a 1-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:16:5
   |
16 |     konst::iter::eval!(R, rfind());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `find` expects to be passed a 1-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:17:5
   |
17 |     konst::iter::eval!(R, rfind(||false));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `find` expects no arguments after closure argument
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:18:5
   |
18 |     konst::iter::eval!(R, rfind(|_| false, 100));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_trailing_expr_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `find` expects to be passed a 1-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:19:5
   |
19 |     konst::iter::eval!(R, rfind(|a, b|false));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `find` expects to be passed a 1-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:20:5
   |
20 |     konst::iter::eval!(R, rfind({whatever1_return}));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid argument(s) for `fold` method: ``
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:24:5
   |
24 |     konst::iter::eval!(R, rfold());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid argument(s) for `fold` method: `0`
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:25:5
   |
25 |     konst::iter::eval!(R, rfold(0));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `fold` expects to be passed a 2-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:26:5
   |
26 |     konst::iter::eval!(R, rfold(0,));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `fold` expects to be passed a 2-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:27:5
   |
27 |     konst::iter::eval!(R, rfold(0, || 10));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `fold` expects to be passed a 2-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:28:5
   |
28 |     konst::iter::eval!(R, rfold(0, |_| 10));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `fold` expects valid closure syntax, passed closure without return value
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:29:5
   |
29 |     konst::iter::eval!(R, rfold(0, |_, _| ));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_no_expr_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `fold` expects to be passed a 2-parameter closure
  --> tests/misc_tests/iter_eval_ui_tests/r_method_syntax_err.rs:30:5
   |
30 |     konst::iter::eval!(R, rfold(0, {whatever2_return::<u8>}));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__parse_closure_emit_error` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)
